syntax = "proto3";

package io.seata.protocol.protobuf;

import "abstractIdentifyRequest.proto";
import "abstractIdentifyResponse.proto";
import "messageType.proto";

option go_package = "/pb";


message TestRequestProto {
  AbstractIdentifyRequestProto abstractIdentifyRequest = 1;
  TestMessageType type = 2;
  string param1 = 3;
}

message TestResponseProto {
  AbstractIdentifyResponseProto abstractIdentifyResponse = 1;
}